Test angular Aggiornato

--- a/src/app/aggiorna-password/aggiorna-password.component.html
+++ b/src/app/aggiorna-password/aggiorna-password.component.html
@@ -17,7 +17,10 @@
       <input [(ngModel)]="this.modificaPassword.password" name="nuova" type="password" id="nuova" class="form-control"  required  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{6,30}$" #password=ngModel />
       <span *ngIf="!password.valid && password.touched"> Inserire almeno 6 caratteri, una maiuscola, una minuscola e un carattere speciale</span>
     </div>
-    <button [disabled]="!form.valid" type="submit" class="btn btn-primary"  >Modifica</button>
+    <br>
+    <button [disabled]="!form.valid || errore" type="submit" class="btn btn-primary"  >Modifica</button>
+    <br  *ngIf=" this.errore && vecchia.touched && email.touched">
+    <span *ngIf=" this.errore && vecchia.touched && email.touched"> Credenziali errate</span>
   </form>
 </div>
 
