--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,35 +1,70 @@
 <div>
 
   <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
+    <ol class="nav-item" role="presentation">
       <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">2024</button>
-    </li>
-    <li class="nav-item" role="presentation">
+    </ol>
+    <ol class="nav-item" role="presentation">
       <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">2023</button>
-    </li>
-    <li class="nav-item" role="presentation">
+    </ol>
+    <ol class="nav-item" role="presentation">
       <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">2022</button>
-    </li>
-    <li class="nav-item" role="presentation">
+    </ol>
+    <ol class="nav-item" role="presentation">
       <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">2021</button>
-    </li>
+    </ol>
   </ul>
   <div class="tab-content" id="myTabContent">
+
     <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"><h2>DIRETTIVO 2024</h2> <br> <ul>
-      <li> <strong> Presidente: </strong> Luigi Francesco Vasile</li>
-      <li> <strong> Vicepresidente: </strong> Mattia Saladino</li>
-      <li> <strong> Tesoriere: </strong> Daniela Pisano</li>
-      <li> <strong> ViceTesoriere: </strong> Luca Iannazzo</li>
-      <li> <strong> Segretaria: </strong> Rosy Murania</li>
-      <li> <strong> Vicetesoriere: </strong> Giuseppe Monte</li>
-      <li> <strong> Resp. Comunicazione: </strong> Gaia Calamera, Valery Mauro</li>
-      <li> <strong> Resp. Organizzazione: </strong> Kevin Anselmi, Alessia Palazzolo</li>
-      <li> <strong> Presidente Agro-Impronta: </strong> Felice Savaia</li>
-      <li> <strong> Presidente Impronta-SPEFF: </strong> Irene Pisano</li>
+      <li> <strong> Presidente : </strong> &nbsp; Luigi Francesco Vasile</li>
+      <li> <strong> Vicepresidente : </strong> &nbsp; Mattia Saladino</li>
+      <li> <strong> Tesoriere : </strong> &nbsp; Daniela Pisano</li>
+      <li> <strong> ViceTesoriere : </strong>&nbsp; Luca Iannazzo</li>
+      <li> <strong> Segretaria : </strong>&nbsp; Rosy Murania</li>
+      <li> <strong> ViceSegretario : </strong>&nbsp; Giuseppe Monte</li>
+      <li> <strong> Resp. Comunicazione : </strong>&nbsp; Gaia Calamera, Valery Mauro</li>
+      <li> <strong> Resp. Organizzazione : </strong>&nbsp; Kevin Anselmi, Alessia Palazzolo</li>
+      <li> <strong> Presidente Agro-Impronta : </strong>&nbsp; Felice Savaia</li>
+      <li> <strong> Presidente Impronta-SPEFF : </strong>&nbsp; Irene Pisano</li>
     </ul> <br> </div>
-    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"> <h2>DIRETTIVO 2023</h2> <br> To create the poster for your event you can rely on our communications team managed by Gaia <br></div>
-    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"><h2>DIRETTIVO 2022</h2> <br> The organization of the spaces is completely entrusted to our designer Kevin <br></div>
-    <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0"><h2>DIRETTIVO 2021</h2> <br> We are very sorry that situations have arisen that have led to complaints. <br> We are at your complete disposal, send us an email with the subject "complaints".
-      <br> We apologize in advance for the inconvenience <br></div>
+    <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"> <h2>DIRETTIVO 2023</h2>  <br> <ul>
+      <li> <strong> Presidente : </strong> &nbsp; Luigi Francesco Vasile</li>
+      <li> <strong> Vicepresidente : </strong> &nbsp; Antonella Gianmalva</li>
+      <li> <strong> Tesoriere : </strong> &nbsp; Daniela Pisano</li>
+      <li> <strong> ViceTesoriere : </strong>&nbsp; Domenico Galati Pupo</li>
+      <li> <strong> Segretaria : </strong>&nbsp; Rosy Murania</li>
+      <li> <strong> ViceSegretario : </strong>&nbsp; Luca Iannazzo</li>
+      <li> <strong> Resp. Comunicazione : </strong>&nbsp; Gaia Calamera, Serena Presti</li>
+      <li> <strong> Resp. Organizzazione : </strong>&nbsp; Kevin Anselmi</li>
+      <li> <strong> Presidente Agro-Impronta : </strong>&nbsp; Felice Savaia</li>
+      <li> <strong> Presidente Impronta-SPEFF : </strong>&nbsp; Irene Pisano</li>
+    </ul> <br>
+    </div>
+    <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"><h2>DIRETTIVO 2022</h2> <br> <ul>
+      <li> <strong> Presidente : </strong> &nbsp; Manuel Lana</li>
+      <li> <strong> Vicepresidente : </strong> &nbsp; Luigi Francesco Vasile</li>
+      <li> <strong> Tesoriere : </strong> &nbsp; Domenico Galati Pupo</li>
+      <li> <strong> ViceTesoriere : </strong>&nbsp; Alexa Montana</li>
+      <li> <strong> Segretaria : </strong>&nbsp; Rosy Murania</li>
+      <li> <strong> ViceSegretario : </strong>&nbsp; Felice Savaia</li>
+      <li> <strong> Resp. Comunicazione : </strong>&nbsp; Serena Presti</li>
+      <li> <strong> Resp. Organizzazione : </strong>&nbsp; Antonella Gianmalva</li>
+      <li> <strong> Presidente Agro-Impronta : </strong>&nbsp; Mauro Conte</li>
+      <li> <strong> Soci Consiglieri : </strong>&nbsp; Mattia Saladino, Luca Iannazzo</li>
+    </ul> <br>
+    </div>
+    <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0"><h2>DIRETTIVO 2021</h2> <br> <ul>
+      <li> <strong> Presidente : </strong> &nbsp; Vincenzo Patti</li>
+      <li> <strong> Vicepresidente : </strong> &nbsp; Francesca Nicastro</li>
+      <li> <strong> Tesoriere : </strong> &nbsp; Luigi Francesco Vasile</li>
+      <li> <strong> ViceTesoriere : </strong>&nbsp; Nicola Paliddaa</li>
+      <li> <strong> Segretario : </strong>&nbsp; Felice Savaia</li>
+      <li> <strong> ViceSegretario : </strong>&nbsp; Antonella Gianmalva</li>
+      <li> <strong> Resp. Comunicazione : </strong>&nbsp; Serena Presti</li>
+      <li> <strong> Resp. Organizzazione : </strong>&nbsp; Antonella Gianmalva</li>
+      <li> <strong> Socio Consigliere : </strong>&nbsp;  Luca Iannazzo</li>
+    </ul> <br></div>
   </div>
+
 </div>
