--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -13,7 +13,7 @@
   margin-left: auto; /* Allinea a destra */
   margin-right: 200px; /* Spazio a destra dalla pagina */
 }
-input+span{
+span{
   color: red;
   font-size: small;
 }
